now it can smoke

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,4 +1,6 @@
-DEBUG = -g -DWITH_DEBUG -DWITH_MPC_RESOLVER
+DEBUG = -g 						\
+		-DWITH_DEBUG			\
+		-DWITH_MPC_RESOLVER
 CC = gcc
 CFLAGS = $(DEBUG)  -Wall -Werror
 INC = -I .
