--- a/src/Makefile
+++ b/src/Makefile
@@ -7,6 +7,7 @@ INC = -I .
 LIB = -lpthread -lcares
 OO = mpc.o 				\
 	 mpc_core.o			\
+	 mpc_signal.o		\
 	 mpc_util.o 		\
 	 mpc_string.o 		\
 	 mpc_log.o 			\
